--- a/app.css
+++ b/app.css
@@ -2,6 +2,7 @@ body {
     font-family: "Outfit", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    color: #2b2b2b;
   }
 
 .container {
@@ -66,7 +67,7 @@ header {
 
 .big-text {
     margin: 0;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 600;
     margin: none;
 }
@@ -77,7 +78,7 @@ header {
 }
 
 .text h2 {
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 300;
     margin: 0;
 }
@@ -94,19 +95,19 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 16px;
+    gap: 12px;
     align-items: center;
 }
 
 .resume i {
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .resume-card {
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #EAEAEA;
+    border: 1px solid #cecece;
     border-radius: 12px;
     margin-top: 3%;
     align-items: center;
@@ -116,4 +117,23 @@ header {
     display: flex;
     flex-direction: row;
     gap: 12px;
+    margin-bottom: 2%;
+}
+
+.resume-content h2 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 0;
+}
+
+.resume-content h3 {
+    font-size: medium;
+    font-weight: 300;
+    margin: 0;
+}
+
+.md-text {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 0;
 }
