--- a/app.css
+++ b/app.css
@@ -28,6 +28,10 @@ body {
     cursor: pointer;
 }
 
+.nav-children-options h1:hover {
+    color: black;
+}
+
 #logo {
     height: 20px;
 }
@@ -46,6 +50,11 @@ header {
       cursor: pointer;
       color: white;
       font-weight: 600;
+      transition: ease-in-out 0.2s;
+  }
+
+  #contact-button:hover {
+      background-color: #0069d1;
   }
 
 .hero {
@@ -84,10 +93,22 @@ header {
 }
 
 .image-frame {
-    height: 12rem;
-    width: 12rem;
+    height: 16rem;
+    width: 16rem;
     border-radius: 12px;
-    background-color: #007FFF;
+    background-image: url('/images/abgao.jpg');
+    background-size: cover;
+    background-position: center;
+    border: 1px solid #cecece;
+}
+
+.card-holder {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 12px;
+    margin-top: 3%;
+    margin-bottom: 12px;
 }
 
 .resume {
@@ -109,7 +130,6 @@ header {
     flex-direction: column;
     border: 1px solid #cecece;
     border-radius: 12px;
-    margin-top: 3%;
     align-items: center;
 }
 
@@ -120,16 +140,32 @@ header {
     margin-bottom: 2%;
 }
 
-.resume-content h2 {
+.resume-content h1 {
     font-size: 1.5rem;
     font-weight: 500;
     margin: 0;
 }
 
-.resume-content h3 {
+.resume-content h2 {
     font-size: medium;
     font-weight: 300;
     margin: 0;
+}
+
+.resume-content div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.resume-title {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.resume-title i {
+    font-size: 3rem;
+    color: #007FFF;
 }
 
 .md-text {
