--- a/index.css
+++ b/index.css
@@ -131,6 +131,7 @@ header {
     border: 1px solid #cecece;
     border-radius: 12px;
     align-items: center;
+    border-radius: 12px;
 }
 
 .resume-content {
@@ -172,4 +173,23 @@ header {
     font-size: 1.5rem;
     font-weight: 500;
     margin: 0;
+}
+
+.project-card-holder {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.card-title h1 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 0;
+}
+
+.card-title h2 {
+    margin: 0;
+    font-size: 1.5rem;
+    font-weight: 300;
 }
